--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node-dev src/index.ts",
-    "vercel-build": "yarn build"
+    "dev": "ts-node-dev src/index.ts"
   },
   "engines": {
     "node": "18.x"
